# reshape

./: Cargo.toml
reshape/: Cargo.toml
reshape/src/: db.rs  lib.rs  migration.rs  schema.rs  state.rs
reshape/src/actions/: add_column.rs  add_foreign_key.rs  add_index.rs  alter_column.rs  common.rs  create_enum.rs  create_table.rs  custom.rs  mod.rs  remove_column.rs  remove_enum.rs  remove_foreign_key.rs  remove_index.rs  remove_table.rs  rename_table.rs
reshape/tests/: add_column.rs  add_foreign_key.rs  add_index.rs  alter_column.rs  common.rs  complex.rs  create_enum.rs  create_table.rs  custom.rs  failure.rs  remove_column.rs  remove_enum.rs  remove_foreign_key.rs  remove_index.rs  remove_table.rs  rename_table.rs
reshape_cli/: Cargo.toml
reshape_cli/src/: config.rs  connection.rs  main.rs  old_lib.rs  range.rs
reshape_cli/src/migration/: abort.rs  complete.rs  mod.rs  start.rs  status.rs
reshape_cli/tests/: common.rs
src/: lib.rs  main.rs
src/migrations/: add_column.rs  alter_column.rs  create_table.rs  mod.rs
