[package]
name = "reshape"
version = "0.7.0"
description = "An easy-to-use, zero-downtime schema migration tool for Postgres"
homepage = "https://github.com/fabianlindfors/reshape"
documentation = "https://github.com/fabianlindfors/reshape"
repository = "https://github.com/fabianlindfors/reshape"
license = "MIT"
keywords = ["postgres", "migrations"]
edition = "2021"
authors = ["Fabian Lindfors"]
rust-version = "1.70"

[dependencies]
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"]}
tokio = { version = "1.38.0", features = ["rt", "time"] }

async-trait = "0.1.80"

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
typetag = "0.2.16"
toml = "0.8.14"

tracing = "0.1.40"
anyhow = "1.0.86"
thiserror = "1.0.61"
version = "3.0.0"
rand = "0.8.5"
lexical-sort = "0.3.1"
